==========================
DictionaryReader Changelog
==========================

Nov 26 2006  Guenther Noack
	* everywhere: Better assertions, wrote awakeFromNib in preferences
	  controller.
	* UKNibOwner.[mh]: Copied UKNibOwner over to DictionaryReader to make
	  a compilation without Etoile possible. When compiling on Etoile,
	  the application will still be linked to EtoileFoundation instead.

Nov 24 2006  Guenther Noack
	* GNUmakefile: Made the inclusion of etoile.make 'weak' (it doesn't
	  fail any more when it's not present)

Nov 15 2006  Quentin Mathe
	* GNUmakefile: Updated to include etoile.make, this allows the project
	to compile without installing EtoileFoundation first.

Nov 07 2006  Yen-Ju Chen
	* GNUmakefile, Preferences.h: Use EtoileFoundation instead deprecated 
	EtoileExtension.
	* HistoryManager.m: return self in -init to avoid memory leak.

Oct 15 2006  Guenther Noack
	* Bug #7379 hopefully fixed. Forgot to "svn add" some files... :-/
	* Thanks for the bugreport to YunSong Hwang :-)
	* Commented out the [dict close] line in AppController (that slowed
	  down the lookup times and it's still consistent now)

Oct 9 2006  Guenther Noack
	* Preference panel works now
	* Support for GZipped (.dz extension) dictionaries (GNUstep only!)

Oct ? 2006  Guenther Noack
	* Preference panel for choosing dictionaries
	* Removed my NSString startsWith: helper method in favor of hasPrefix:
	  which already existed. :->

Aug 8 2006 Guenther Noack
	* Local dictionary support written (currently, the jargon file
	  is bundled with the application). Still needs to be made
	  configurable.
	* GUI width increased so avoid automatic line breaks.
	* Edit menu added to GUI (has a 'copy' and a 'select all' entry)

Jun 18 2006 Guenther Noack
	* Fixed the 'bad dictionary names' bug. The dictionary name
	  display in the text view looks much better now. :-)
	  
Jun 18 2006 Guenther Noack
	* Added code which is intended to fix the 'bad dictionary names'